# mano

./: .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml
docs/: Gemfile  Makefile  _config.yml  conf.py  index.md  index.rst  make.bat
mano/: __init__.py  __version__.py  config.json  mano.py  sync.py
mano/sync/: __init__.py
scripts/: beiwe_downloader.py
tests/: __init__.py  conftest.py  download.v1.json  keyring.enc  test_all.py  test_keyring.py  test_misc.py  test_studies.py  test_sync.py  tests.py
tests/cassettes/: download.v1.yaml  studies.v1.yaml  studies.yaml  users.v1.yaml
tests/data/: .gitkeep  README.md
