[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mano"
version = "0.5.3"
description = "Python API for Beiwe Research Platform"
authors = [
    {name = "Onnela Lab", email = "onnela.lab@gmail.com"}
]
maintainers = [
    {name = "Onnela Lab", email = "onnela.lab@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "cryptease",
    "lxml",
    "python-dateutil",
    "requests"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://onnela-lab.github.io/mano"
Issues = "https://github.com/onnela-lab/mano/issues"
Source = "https://github.com/onnela-lab/mano"

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "twine"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mano*"]

[tool.setuptools.package-data]
"mano" = ["config.json"]
